--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>NazoratHub</title>
+    <!-- Tailwind dizaynni ta'minlaydi -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Inter', sans-serif; background-color: #f8fafc; }
+        body { 
+            font-family: 'Inter', sans-serif; 
+            background-color: #f8fafc; 
+            margin: 0;
+            padding: 0;
+        }
+        /* Scroller'ni yashirish uchun */
         ::-webkit-scrollbar { display: none; }
+        * { -ms-overflow-style: none; scrollbar-width: none; }
     </style>
 <script type="importmap">
 {
@@ -30,6 +38,7 @@
 </head>
 <body>
     <div id="root"></div>
+    <!-- React ilovasini ishga tushirish -->
     <script type="module" src="/index.tsx"></script>
 </body>
 </html>
