Modify index.html for improved layout and title
Updated title and added overflow-x hidden style.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>NazoratHub</title>
-    <!-- Tailwind dizaynni ta'minlaydi -->
+    <title>NazoratHub - Operatorlar Boshqaruvi</title>
+    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
     <style>
@@ -14,8 +14,8 @@
             background-color: #f8fafc; 
             margin: 0;
             padding: 0;
+            overflow-x: hidden;
         }
-        /* Scroller'ni yashirish uchun */
         ::-webkit-scrollbar { display: none; }
         * { -ms-overflow-style: none; scrollbar-width: none; }
     </style>
@@ -38,7 +38,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <!-- React ilovasini ishga tushirish -->
     <script type="module" src="/index.tsx"></script>
 </body>
 </html>
