Enhance index.html with comments and styling
Updated comments and style for scrollbar visibility.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>NazoratHub - Operatorlar Boshqaruvi</title>
-    <!-- Tailwind CSS -->
+    <!-- Tailwind CSS (Dizayn uchun) -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
     <style>
@@ -16,6 +16,7 @@
             padding: 0;
             overflow-x: hidden;
         }
+        /* Scrollerlarni yashirish */
         ::-webkit-scrollbar { display: none; }
         * { -ms-overflow-style: none; scrollbar-width: none; }
     </style>
